improved host catching