@@ -13,16 +13,19 @@ import java.util.*;
 
 class HostCatcher implements MessageListener {
 
-    private static final int MAX_HOSTLIST_SIZE = 200;
-	
+    private static final int MAX_HOSTLIST_SIZE = 500;
+    private static final int KEEP_SEEN_HOSTS = 5000;
+
     private GnutellaEngine engine;
-    private List addedHosts;
-    private List caughtHosts;
+    private LinkedList seenHosts;
+    private Set addedHosts;
+    private Set caughtHosts;
     
     public HostCatcher (GnutellaEngine engine) {
 	this.engine = engine;
-	this.caughtHosts = Collections.synchronizedList(new ArrayList());
-	this.addedHosts = Collections.synchronizedList(new ArrayList());
+	this.caughtHosts = new LinkedHashSet();
+	this.addedHosts = new LinkedHashSet();
+	this.seenHosts = new LinkedList();
 	engine.addMessageListener(this);
     }
     
@@ -33,6 +36,8 @@ class HostCatcher implements MessageListener {
     /**
      * The manually added hosts are prioritized
      *
+     * The caught hosts are returned in reported speed order
+     *
      * @return a host from the list of known hosts
      * @return null if no hosts are known
      */
@@ -41,10 +46,19 @@ class HostCatcher implements MessageListener {
 	Host host = null;
 
 	if (addedHosts.size() > 0) {
-	    host = (Host) addedHosts.remove(0);
+	    host = (Host) addedHosts.iterator().next();
+	    addedHosts.remove(host);
 	
 	} else if (caughtHosts.size() > 0) {
-	    host = (Host) caughtHosts.remove(0);
+	    host = (Host) caughtHosts.iterator().next();
+	    caughtHosts.remove(host);
+	}
+
+	if (host != null) {
+	    if (seenHosts.size() >= KEEP_SEEN_HOSTS) {
+		seenHosts.removeFirst();
+	    }
+	    seenHosts.add(host);
 	}
 
 	return host;
@@ -54,12 +68,15 @@ class HostCatcher implements MessageListener {
 	/* catch the host */
 	if (caughtHosts.size() < MAX_HOSTLIST_SIZE) {
 	    Host host = new Host(message.getHost(), message.getPort());
-	    if (host.isNonPublic()) {
-		this.engine.hostIgnored(host);
-	    } else {
-		caughtHosts.add(host);
-		this.engine.hostDiscovered(host);
-	    }
+
+	    if (!seenHosts.contains(host)) {
+		if (host.isNonPublic()) {
+		    this.engine.hostIgnored(host);
+		} else {
+		    caughtHosts.add(host);
+		    this.engine.hostDiscovered(host);
+		}
+	    } 
 	}
     }
     public void receivedPing(PingMessage message) {}
